[tool.poetry]
name = "oura-visualizer"
version = "0.1.0"
description = ""
authors = ["Herrick Fang <herrickfang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dagster = "^0.7.5"
flask = "^1.1.1"
requests = "^2.23.0"
redis = "^3.4.1"
requests_oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
